# ffmpeg-windows

./: ProjectHome.md  ffmpeg-window.sln
ffmpeg-git/: stdint.h
ffmpeg-git/libavcodec/: ac3_parser.h  ac3enc_fixed.c  asv1.c  avcodec.h  bitstream.c  dct.c  h264_cabac.c  imgconvert.c  libfaac.c  libopenjpeg.c  libschroedinger.c  libschroedingerenc.c  libvpxenc.c  libxvid_rc.c  lpc.c  mdct.c  motion-test.c  motion_est.c  mpegaudio.h  mpegaudiodata.c  mpegaudiodata.h  mpegaudiodec.c  rdft.c  sinewin_tablegen.c  tableprint.c  utils.c  vaapi.c  vaapi_h264.c  vaapi_mpeg4.c  vdpau.h  vorbis.c  vorbis_enc.c  vp56dsp.c  xsubdec.c  xvmc.h
ffmpeg-git/libavdevice/: v4l.c  v4l2.c  x11grab.c
ffmpeg-git/libavfilter/: avfilter.h  avfiltergraph.h  vf_drawbox.c  vf_drawtext.c  vf_fieldorder.c  vf_frei0r.c  vf_gradfun.c  vf_mp.c  vf_transpose.c  vsrc_buffer.c
ffmpeg-git/libavformat/: allformats.c  avisynth.c  file.c  librtmp.c  md5proto.c  os_support.c  output-example.c  rtp.c  rtspenc.c  sapdec.c  utils.c
ffmpeg-git/libavutil/: base64.h  common.h  cpu.h  log.c  lzo.h  parseutils.c  pixdesc.h  rc4.h  timer.h
ffmpeg-git/libswscale/: libswscale-uninstalled.pc  swscale_internal.h
ffmpeg0.7/: ffmpeg-window.sln
ffmpeg0.7-CKW/ffmpeg-git/: _types.h  config.h  ffmpeg.c  inttypes.h  stdint.h  strings.h  version.h
ffmpeg0.7-CKW/ffmpeg中文文档/: 文档总体说明.txt
ffmpeg0.7-CKW/libavcodec/: ReadMe.txt
ffmpeg0.7-CKW/libavdevice/: ReadMe.txt  libavdevice.vcproj
ffmpeg0.7-CKW/libavfilter/: libavfilter.c  libavfilter.vcproj
ffmpeg0.7-CKW/libavutil/: stdafx.c
ffmpeg0.7-CKW/libavutilCKW/: ReadMe.txt
ffmpeg0.7-CKW/libswscale/: ReadMe.txt  libswscale.c
ffmpeg0.7-CKW/testffmpeg/: ReadMe.txt  stdafx.cpp  testffmpeg.cpp  testffmpeg.icproj  testffmpeg.vcproj  testffmpeglib.h  testffmpeglib_avutil.cpp
ffmpeg0.7-CKW/work/include/schroedinger/opengl/: Makefile.am  Makefile.in  schroopengl.c  schroopengl.h  schroopenglframe.h  schroopenglframe_combine.c  schroopenglframe_convert.c
ffmpeg0.7/ffmpeg-git/: _types.h  strings.h
ffmpeg0.7/libavcodec/: libavcodec.icproj  libavcodec.vcproj
ffmpeg0.7/libavdevice/: libavdevice.icproj  stdafx.c
ffmpeg0.7/libavfilter/: ReadMe.txt
ffmpeg0.7/libavformat/: libavformat.c  libavformat.vcproj
ffmpeg0.7/libavutil/: libavutil.icproj
ffmpeg0.7/libavutilCKW/: libavutilCKW.cpp  libavutilCKW.icproj  libavutilCKW.vcproj  stdafx.cpp
ffmpeg0.7/libswscale/: libswscale.icproj  libswscale.vcproj
ffmpeg0.7/work/: work.lnk
ffmpeg0.7/work/include/schroedinger/: Makefile.am  schroanalysis.c  schroasync-gthread.c  schroasync-none.c  schrobuffer.c  schrobufferlist.c  schroencoder.c  schroengine.c  schrogpuframe.c  schrogpuframe.h  schrogpumotion.c  schrohierbm.c  schromotion.c  schromotionfast.c  schromotionref.c  schroorc-dist.h  schropack.c  schroparams.c  schroroughmotion.c  schrovideoformat.c  schrowavelettables.c  tmp-orc.c
ffmpeg0.7/work/include/schroedinger/.deps/: libschroedinger_1.0_la-schroanalysis.Plo  libschroedinger_1.0_la-schroarith.Plo  libschroedinger_1.0_la-schrobufferlist.Plo  libschroedinger_1.0_la-schrodebug.Plo  libschroedinger_1.0_la-schrodecoder.Plo  libschroedinger_1.0_la-schroencoder.Plo  libschroedinger_1.0_la-schrofilter.Plo  libschroedinger_1.0_la-schroframe.Plo  libschroedinger_1.0_la-schrohistogram.Plo  libschroedinger_1.0_la-schrolowdelay.Plo  libschroedinger_1.0_la-schromotionest.Plo  libschroedinger_1.0_la-schromotionfast.Plo  libschroedinger_1.0_la-schromotionref.Plo  libschroedinger_1.0_la-schropack.Plo  libschroedinger_1.0_la-schroparse.Plo  libschroedinger_1.0_la-schrophasecorrelation.Plo  libschroedinger_1.0_la-schroroughmotion.Plo  libschroedinger_1.0_la-schroutils.Plo
ffmpeg0.7/work/include/schroedinger/cuda/: Makefile  Makefile.am  cudawavelet.cu  haar_iiwt.cu  iiwt13_5.cu  iiwt9_7.cu  init.cu  iwt13_5.cu  iwt5_3.cu  iwt9_3.cu  iwt9_7.cu  iwtfidelity.cu  motion_tex.cu  upsample.cu
ffmpeg0.7/work/include/schroedinger/opengl/: schroopenglcanvas.c  schroopenglframe.c  schroopenglframe_pull.c  schroopenglmotion.c  schroopenglmotion.h  schroopengltypes.h  schroopenglwavelet.c
libavcodec/: libavcodec.c  stdafx.c
libavdevice/: libavdevice.c
libavfilter/: libavfilter.icproj  stdafx.c
libavformat/: ReadMe.txt  libavformat.icproj  stdafx.c
libavutil/: ReadMe.txt  libavutil.c  libavutil.vcproj
libswscale/: stdafx.c
ownDoCodec/参考书籍/: Visual++C音视频编解码技术及实践-2008年第二版------前言.txt
work/dll/debug/: test.avs
work/include/: unistd.h  xavs.h
其他多媒体开源工具/freeswitch/: freeswitch初步分析1.doc
(+3732 files in other folders)
